[workspace]
resolver = "2"
#members = ["mzg","leved","game"]
members = ["game","editor"]

[workspace.package]
version = "0.1.0"
authors = ["Berke DURAK <bd@exhrd.fr>"]
license = "Proprietary"
edition = "2021"
rust-version = "1.72"

[workspace.dependencies.anyhow]
version = "1"

[workspace.dependencies.serde]
version = "1.0.152"
features = ["derive"]

[workspace.dependencies.ron]
version = "0.6"

[workspace.dependencies.mzg-game]
version = "0.1.0"
path = "game"