[workspace]
resolver = "2"
members = ["game","editor","player"]

[workspace.package]
version = "0.1.0"
authors = ["Berke DURAK <bd@exhrd.fr>"]
license = "Proprietary"
edition = "2021"
rust-version = "1.72"

[workspace.dependencies.anyhow]
version = "1"

[workspace.dependencies.serde]
version = "1.0.197"
features = ["derive"]

[workspace.dependencies.ron]
version = "0.8.1"

[workspace.dependencies.mzg-game]
path = "game"