[package]
name = "mzg-editor"
edition = "2021"
version.workspace = true

[dependencies.eframe]
version = "0.26.2"
default-features = false
features = ["default"]

[dependencies.rfd]
version = "0.13"

[dependencies.egui_extras]
version = "*"
features = ["default","all_loaders"]

[dependencies.image]
version = "0.24"
default-features = false
features = ["jpeg","png"]

[dependencies.anyhow]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.ron]
workspace = true

[dependencies.mzg-game]
workspace = true